--- a/index.html
+++ b/index.html
@@ -64,9 +64,7 @@
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
-          <div class="col-md-4 mb-4">Hai, perkenalkan nama saya Muhammad Fizri Ibrahim saya seorang pelajar sekolah tingkat atas di SMK Plus Pelita Nusantara Jurusan Rekayasa Perangkat Lunak</div>
-          <div class="col-md-4">Jenjang Pendidikan : <br>Sdit Ar Riyadl <br> SMPN 2 Citeureup <br> SMK Plus Pelita Nusantara
-          </div>
+          <div class="col-md-4 mb-4 text-center">Perkenalkan, Nama saya Muhammad Fizri Ibrahim, Saat ini saya berumur 16 tahun. Saya tinggal di Bogor, Jawa Barat. Saat ini, saya masih duduk dibangku sekolah SMK, bersekolah di SMK Plus Pelita Nusantara kelas XI RPL-3.</div>
         </div>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -93,6 +91,22 @@
               <img src="img/projects/myarticleee.jpg" class="card-img-top" alt="Projects1" />
               <div class="card-body">
                 <p class="card-text"><b>Web artikel: </b>Ini adalah web artikel pertama saya.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="img/projects/laravel.jpg" class="card-img-top" alt="Projects1" />
+              <div class="card-body">
+                <p class="card-text"><b>CRUD Laravel: </b>Ini adalah tampilan website dari CRUD Laravel</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="img/projects/todolist.jpg" class="card-img-top" alt="Projects1" />
+              <div class="card-body">
+                <p class="card-text"><b>To-do List: </b>ini adalah website to-do list sederhana</p>
               </div>
             </div>
           </div>
